@@ -1,3 +1,4 @@
+syntax:glob
 aclocal.m4
 autom4te*
 config.cache
